[package]
name = "DNS-Over-HTTPS"
version = "0.1.4"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-tls = "0.5"
trust-dns-client = { version = "0.22", default-features = false, features = ["dns-over-https-rustls"] }
